[package]
name = "dirac"
version = "0.0.0"
authors = ["Lukas Pustina <lukas@pustina.net>"]

[[bin]]
name = "dirac-check"
path = "src/main.rs"

[dependencies]
clap = "2"
env_logger = "0.3"
hyper = "0.8.0"
log = "0.3"
regex = "0.1.58"
rustc-serialize = "0.3"
term-painter = "0.2.2"
yaml-rust = "0.3.2"

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython.git"
#default-features = false
#python27-sys = []

